Fixed overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,15 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+html {
+  width : 100%;
+  overflow : hidden;
+}
 body {
   margin : 0;
+  position: relative;
+  width : 100%;
+  overflow: hidden;
 }
 .container {
     min-height : 100vh;
